--- a/app/src/main/res/layout/activity_trip_info.xml
+++ b/app/src/main/res/layout/activity_trip_info.xml
@@ -121,5 +121,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="199dp"
+        android:onClick="makeComplaint"
         android:text="report problem" />
 </RelativeLayout>
