--- a/app/src/main/res/layout/driver_details_diaglog.xml
+++ b/app/src/main/res/layout/driver_details_diaglog.xml
@@ -32,7 +32,7 @@
     </TextView>
 
     <TextView
-        android:id="@+id/driverName"
+        android:id="@+id/riderName"
         android:layout_width="120dp"
         android:layout_height="30dp"
         android:layout_marginTop="4dp"
@@ -56,7 +56,7 @@
         android:fontFamily="@font/poppin_bold"
         android:gravity="center"
         android:text="Driver Name"
-        app:layout_constraintEnd_toStartOf="@+id/driverName"
+        app:layout_constraintEnd_toStartOf="@+id/riderName"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/driverPhoneNumber"
         app:layout_constraintTop_toBottomOf="@+id/driverRealRate">
