--- a/app/src/main/res/layout/fragment_assign_car_to_driver.xml
+++ b/app/src/main/res/layout/fragment_assign_car_to_driver.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/defaultBackground"
     android:orientation="vertical">
 
@@ -9,67 +11,162 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:background="@color/defaultBackground"
-        android:text="Assign Car To Driver"
-        android:layout_marginTop="70dp"
+        android:fontFamily="@font/poppin_bold"
         android:gravity="center"
+        android:text="Assign Car To Driver"
         android:textColor="@color/white"
-        android:textSize="45sp"
-        android:fontFamily="@font/poppin_bold" />
+        android:textSize="40sp"
+        tools:ignore="TextContrastCheck" />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp">
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="48dp"
+            android:text="Available Cars"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_drivers_without_cars"
+            android:layout_width="181dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/rv_available_cars"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView13"
+            app:layout_constraintVertical_bias="0.235" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="16dp"
+            android:text="Drivers Without Cars"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toStartOf="@+id/textView14"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_available_cars"
+            android:layout_width="200dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView14"
+            app:layout_constraintVertical_bias="0.0">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_assign_car_plateNo"
         android:layout_width="match_parent"
-        android:layout_marginHorizontal="20dp"
         android:layout_height="57dp"
-        android:layout_marginTop="90dp"
         android:layout_gravity="center"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/input_bg"
         android:elevation="20dp"
         android:gravity="fill"
         android:hint="Car Plate Number"
         android:inputType="text"
-        android:paddingLeft="20dp"/>
-    <androidx.appcompat.widget.AppCompatEditText
+        android:paddingLeft="20dp" />
+<!--    <androidx.appcompat.widget.AppCompatEditText-->
 
-        android:id="@+id/et_assign_driver_id"
+<!--        android:id="@+id/et_assign_driver_phoneNo"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_marginHorizontal="20dp"-->
+<!--        android:layout_height="57dp"-->
+<!--        android:layout_marginTop="25dp"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:background="@drawable/input_bg"-->
+<!--        android:elevation="20dp"-->
+<!--        android:gravity="fill"-->
+<!--        android:hint="Driver Phone Number"-->
+<!--        android:inputType="number"-->
+<!--        android:paddingLeft="20dp"/>-->
+    <LinearLayout
+        android:id="@+id/linear_layout"
         android:layout_width="match_parent"
-        android:layout_marginHorizontal="20dp"
         android:layout_height="57dp"
-        android:layout_marginTop="25dp"
-        android:layout_gravity="center"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/input_bg"
         android:elevation="20dp"
-        android:gravity="fill"
-        android:hint="Driver Phone Number"
-        android:inputType="number"
-        android:paddingLeft="20dp"/>
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+
+        <com.hbb20.CountryCodePicker
+            android:id="@+id/code_picker_assign_car_to_driver"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="2dp"
+            android:paddingTop="10dp"
+            app:ccp_defaultNameCode="EG"
+
+
+            />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/et_assign_driver_phoneNo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/input_bg"
+            android:hint="Driver's Phone Number"
+            android:inputType="number"
+            android:padding="10dp" />
+
+    </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/progress_bar_add_car"
+        android:id="@+id/progress_bar_assign_car"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:outlineSpotShadowColor="@color/white"
-        android:indeterminate="true"
-        android:indeterminateTintMode="src_atop"
-        android:indeterminateTint="@color/white"
-        android:visibility="invisible"
         android:layout_gravity="center"
-        />
+        android:layout_marginTop="20dp"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/white"
+        android:indeterminateTintMode="src_atop"
+        android:outlineSpotShadowColor="@color/white"
+        android:visibility="invisible" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_assign_car_to_driver"
         android:layout_width="186dp"
         android:layout_height="54dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
         android:background="@drawable/facebook_login"
         android:fontFamily="@font/poppin_bold"
         android:text="Assign Car"
-        android:textColor="@color/black"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        />
+        android:textColor="@color/black" />
 
 
 
