--- a/app/src/main/res/layout/activity_trip_info.xml
+++ b/app/src/main/res/layout/activity_trip_info.xml
@@ -8,119 +8,130 @@
 
     <TextView
         android:id="@+id/tripdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="46dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="@font/poppin"
+        android:gravity="center"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/triptime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="116dp"
+
+        android:layout_height="47dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="137dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="33dp"
         android:drawableLeft="@drawable/ic_baseline_access_time_24"
         android:drawablePadding="2dp"
+        android:fontFamily="@font/poppin"
 
         android:gravity="center"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/tripfare"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="99dp"
+        android:layout_height="46dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="42dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="30dp"
+        android:fontFamily="@font/poppin"
+        android:gravity="center"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/trippickup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="127dp"
+
+        android:layout_height="61dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="142dp"
         android:drawableLeft="@drawable/ic_baseline_my_location_24"
         android:drawablePadding="2dp"
-        android:gravity="bottom"
+        android:gravity="center"
 
         android:text="TextView" />
 
     <TextView
         android:id="@+id/tripdestination"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="114dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="35dp"
         android:layout_marginTop="232dp"
         android:drawableLeft="@drawable/ic_baseline_location_on_24"
         android:drawablePadding="2dp"
-        android:gravity="bottom"
+        android:gravity="center"
 
         android:text="TextView" />
 
     <TextView
         android:id="@+id/textView28"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="108dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="35dp"
         android:layout_marginTop="324dp"
+        android:gravity="center"
         android:text="Your trip with" />
 
     <TextView
         android:id="@+id/tripdriver"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="107dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="324dp"
+        android:layout_marginStart="187dp"
+        android:layout_marginTop="326dp"
+        android:gravity="center"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/textView30"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="58dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginBottom="321dp"
-        android:gravity="bottom"
+        android:layout_marginStart="33dp"
+        android:layout_marginBottom="265dp"
+        android:drawableLeft="@drawable/ic_baseline_star_rate_24"
 
         android:drawablePadding="2dp"
 
-        android:drawableLeft="@drawable/ic_baseline_star_rate_24"
+        android:gravity="center"
 
         android:text="Rate :" />
 
     <TextView
         android:id="@+id/triprate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="113dp"
-        android:layout_marginBottom="321dp"
+        android:layout_marginStart="156dp"
+        android:layout_marginBottom="269dp"
+        android:gravity="center"
         android:text="TextView" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="199dp"
         android:onClick="makeComplaint"
+        android:background="@drawable/roundedcorners"
         android:text="report problem" />
 </RelativeLayout>
