--- a/app/src/main/res/layout/fragment_trips_history_fragment.xml
+++ b/app/src/main/res/layout/fragment_trips_history_fragment.xml
@@ -8,7 +8,9 @@
 
     <TextView
         android:id="@+id/textView7"
+        android:textSize="30dp"
         android:layout_width="411dp"
+        android:fontFamily="@font/poppin_bold"
         android:layout_height="102dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
@@ -19,11 +21,12 @@
         app:layout_constraintTop_toTopOf="parent"></TextView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
         android:id="@+id/pt_fragment"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="67dp"
+        android:layout_width="match_parent"
+        android:layout_height="580dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"></androidx.recyclerview.widget.RecyclerView>
 
