--- a/app/src/main/res/layout/trip_custom_item.xml
+++ b/app/src/main/res/layout/trip_custom_item.xml
@@ -1,59 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/customitem_driver_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="46dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="95dp"
-        android:text="TextView" />
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="99dp"
+        android:fontFamily="@font/poppin_bold"
+        android:gravity="center"
+        android:text="Phone Number"
+        android:textSize="15dp" />
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="95dp"
+        android:layout_height="52dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="22dp"
         android:layout_marginTop="95dp"
-        android:text="Driver :" />
+        android:fontFamily="@font/poppin_bold"
+        android:gravity="center"
+        android:text="Driver : Phone"
+        android:textSize="15dp" />
 
     <TextView
         android:id="@+id/customitem_fare"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="115dp"
+        android:layout_height="46dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="95dp"
-        android:layout_marginEnd="122dp"
-        android:text="TextView" />
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/poppin_bold"
+        android:gravity="center"
+        android:text="Trip Fare"
+        android:textSize="15dp" />
+
+    <TextView
+        android:id="@+id/customitem_time"
+        android:layout_width="142dp"
+        android:layout_height="44dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="147dp"
+        android:layout_marginTop="34dp"
+        android:drawableLeft="@drawable/ic_baseline_access_time_24"
+        android:drawablePadding="2dp"
+        android:fontFamily="@font/poppin_bold"
+        android:gravity="center"
+        android:text="Trip TIme"
+        android:textSize="15dp" />
 
     <TextView
         android:id="@+id/customitem_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+
+        android:layout_height="49dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="22dp"
         android:layout_marginTop="30dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/customitem_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="30dp"
-        android:drawableLeft="@drawable/ic_baseline_access_time_24"
-        android:drawablePadding="2dp"
+        android:fontFamily="@font/poppin_bold"
         android:gravity="center"
+        android:text="Trip Date"
+        android:textSize="15dp" />
 
-        android:text="TextView" />
 </RelativeLayout>
