assign car to driver fully completed!

--- a/app/src/main/res/layout/available_car_custom_item.xml
+++ b/app/src/main/res/layout/available_car_custom_item.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/tv_car_plate_no"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="@color/black"
