--- a/app/src/main/res/layout/driver_without_car_custom_item.xml
+++ b/app/src/main/res/layout/driver_without_car_custom_item.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/driver_without_car_phoneNo"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
