--- a/app/src/main/res/layout/fragment_assign_car_to_driver.xml
+++ b/app/src/main/res/layout/fragment_assign_car_to_driver.xml
@@ -23,7 +23,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textView14"
@@ -40,8 +40,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_drivers_without_cars"
+            tools:itemCount="3"
+
             android:layout_width="181dp"
-            android:layout_height="0dp"
+            android:layout_height="100dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
@@ -70,8 +72,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_available_cars"
+            tools:itemCount="3"
             android:layout_width="200dp"
-            android:layout_height="0dp"
+            android:layout_height="100dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
             android:padding="10dp"
@@ -89,7 +92,7 @@
         android:layout_height="57dp"
         android:layout_gravity="center"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/input_bg"
         android:elevation="20dp"
         android:gravity="fill"
