--- a/app/src/main/res/layout/nav_header_employee.xml
+++ b/app/src/main/res/layout/nav_header_employee.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
+        android:id="@+id/nav_header_employee_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
