--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -11,7 +11,7 @@
         android:layout_width="124dp"
         android:layout_height="96dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/car_rider"
+        android:src="@drawable/ic_baseline_person_pin_24"
         app:civ_border_color="@color/mapsStatus"
         app:civ_border_width="5dp"
         app:layout_constraintEnd_toEndOf="parent"
